Fixed contrast errors on send button

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -319,7 +319,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-    background-color: #ea4600;
+    background-color: #000000;
     color: #dddddd;
 }
 
